# bingo_generator

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/bingo_generator/: generator.py  input.py  main.py
