[tool.poetry]
name = "bingo-generator"
version = "0.1.0"
description = ""
authors = ["Marta Radziszewska <marta.radziszewska@gmail.com>"]
readme = "README.md"
packages = [
    {include = "bingo_generator", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.1"
XlsxWriter = "^3.0.7"
tqdm = "^4.64.1"
click = "^8.1.3"
pre-commit = "^3.0.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_board  = "bingo_generator.main:main"
